--- a/calendar-front/package.json
+++ b/calendar-front/package.json
@@ -6,7 +6,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "lint": "eslint --ext .ts,vue --ignore-path .gitignore .",
+    "lint-fix": "eslint --fix --ext .ts,vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "vue": "^3.2.25"
@@ -17,8 +19,13 @@
     "@storybook/addon-essentials": "^6.4.9",
     "@storybook/addon-links": "^6.4.9",
     "@storybook/vue3": "^6.4.9",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
     "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/eslint-config-typescript": "^9.1.0",
     "babel-loader": "^8.2.3",
+    "eslint": "^8.4.1",
+    "eslint-plugin-vue": "^8.2.0",
     "vite": "^2.7.2",
     "vue-loader": "^16.8.3"
   }
