--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "babel-loader": "^8.2.3",
     "eslint": "^8.4.1",
+    "eslint-plugin-storybook": "^0.5.5",
     "eslint-plugin-vue": "^8.2.0",
     "vite": "^2.7.2",
     "vue-loader": "^16.8.3"
