--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "lint": "eslint --ext .ts,vue --ignore-path .gitignore .",
-    "lint-fix": "eslint --fix --ext .ts,vue --ignore-path .gitignore ."
+    "lint-fix": "eslint --fix --ext .ts,vue --ignore-path .gitignore .",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,vue}": "eslint --fix"
   },
   "dependencies": {
     "vue": "^3.2.25"
@@ -27,6 +32,8 @@
     "eslint": "^8.4.1",
     "eslint-plugin-storybook": "^0.5.5",
     "eslint-plugin-vue": "^8.2.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^12.1.3",
     "vite": "^2.7.2",
     "vue-loader": "^16.8.3"
   }
